# ComfyUi-MpiNodes

./: .gitignore  README.md  __init__.py  add_image_to_list.py  batch_text_replace.py  boolean.py  changelog.md  checkpoint.py  combos.py  dynamic_combo.py  get_ratio.py  help_funcs.py  if_else.py  img.py  json.py  logger.py  logic.py  loras.py  math.py  multi_text.py  normalize_value.py  pyproject.toml  subgraph_test.py  switches.py  test_dummy.py  text_list_join.py  text_list_replace.py  vram.py  wan.py
example_workflows/: Mpi PromptGen Systems.json  Mpi PromptGen Tutorial.json
prompt_gen/: display_prompts.py  has_options.py  prompt_bridge.py  prompt_chain_selector.py  prompt_list.py  prompt_list_join.py  prompt_list_selector.py  prompt_override.py  prompt_processor.py  rand_prompt_gen.py
user/: prompt_gen_combos.json
user/combos/: combo_1.txt  combo_2.txt  combo_3.txt  combo_7.txt
user/prompt_gen_preset/: bikini.txt  expressions.txt  hair_styles.txt  indoor_bright_lighting.txt  indoor_clothing_set.txt  indoor_dark_lighting.txt  indoor_locations.txt  lingerie.txt  outdoor_bright_lighting.txt  outdoor_clothing_set.txt  outdoor_dark_lighting.txt  outdoor_locations.txt  poses.txt  read_me.txt  settings.json  shot_types.txt
web/: MpiDummyToggleNode.js  combos.js  dynamic_combo.js  prompt_list.js
web/docs/: MpiPromptList.md
web/user/: combos.json
