[project]
name = "ComfyUi-MpiNodes"
description = """
Added:
MpiFloat
MpiInt
MpiString
MpiText
MpiSimpleBool
MpiBboxToMask
MpiMultiText
MpiGetImageAtIndex
Fixed: Nodes category location
"""
version = "1.0.2"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/MadPonyInteractive/ComfyUi-MpiNodes"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = "mad-pony-interactive"
DisplayName = "ComfyUi-MpiNodes"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

